--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "webpack-oss",
   "version": "1.0.0",
   "description": "oss CDN publish",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "dist/webpackOssPublish.js",
   "keywords": [
     "pushlish",
     "oss",
